--- a/CM 1015 Computational Mathematics/06-trigo-functions.Rmd
+++ b/CM 1015 Computational Mathematics/06-trigo-functions.Rmd
@@ -6,3 +6,17 @@ output:
 #  Trigonometric Functions
 
 Reading Materials: \newline
+
+### Pythagorean Identities
+
+\begin{equation}
+\sin^2 \theta + \cos^2 \theta = 1
+\end{equation}
+
+\begin{equation}
+1 + \tan^2 \theta = \sec^2 \theta
+\end{equation}
+
+\begin{equation}
+1 + \cot^2 \theta = \csc^2 \theta
+\end{equation}
